--- a/sitemario/index.html
+++ b/sitemario/index.html
@@ -716,5 +716,17 @@
 
         <button onclick="printToPDF()">Gerar PDF</button>    
     <button onclick="sendEmail()">Enviar Email</button>  
+
+    <div id="printAlertModal" class="modal">
+      <div class="modal-content">
+          <span class="close-button">&times;</span>
+          <h2>Atenção ao Imprimir!</h2>
+          <p>Para garantir que todas as <strong>cores e imagens de fundo</strong> apareçam na impressão (ou no PDF), por favor, <strong>ATIVE a opção "Imprimir gráficos de fundo"</strong> (ou similar) nas configurações de impressão do seu navegador.</p>
+          <p>Esta opção geralmente está em "Mais configurações" ou "Configurações avançadas" dentro do diálogo de impressão.</p>
+          <button class="modal-print-button">Entendi, Gerar Impressão</button>
+      </div>
+  </div>
+
+
   </body>
 </html>
